fixed chat window way overflowing

--- a/src/App.css
+++ b/src/App.css
@@ -152,6 +152,7 @@
   flex: 1 0 55%;
   padding: 0.5em;
   border-radius: 0.5em;
+  max-height: 55%;
   
   display: flex;
   justify-content: center;
@@ -406,8 +407,6 @@
 }
 
 .chatScroller {
-  width: 92.5%;
-  height: 100%;
   overflow-y: scroll;
   overflow-x: hidden;
 
